# mlops-phishing

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose.yml  download_data.py  implementation_plan.md  main.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  walkthrough.md
.github/workflows/: ci.yml
ai_analyst/: feature_extractor.py  gemini_analyst.py  schemas.py  threat_agent.py
data_schema/: schema.yaml
docs/: ARCHITECTURE.md
docs/images/: README.md
final_model/: model.pkl
phishsentinel/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_trainer.py
phishsentinel/constant/: training_pipeline.py
phishsentinel/database/: supabase_client.py
phishsentinel/entity/: artifact_entity.py  config_entity.py
phishsentinel/exception/: exception.py
phishsentinel/monitoring/: drift_monitor.py
phishsentinel/pipeline/: training_pipeline.py
phishsentinel/registry/: model_registry.py
phishsentinel/utils/main_utils/: utils.py
phishsentinel/utils/ml_utils/model/: estimator.py
templates/: index.html
tests/: conftest.py  test_agent_and_feedback.py  test_analyst.py  test_api.py  test_drift_monitor.py  test_feature_extractor.py  test_model_evaluation.py
